[package]
name = "noctiforge_sdk_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0"
env_logger = "0"
tonic = "0"
tonic-prost = "0"
prost = "0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-prost-build = "0"
reqwest = { version = "0", features = ["blocking"] }
